- fixed: final paragraph spacing issues

--- a/assets/css/aboutMeMobile.css
+++ b/assets/css/aboutMeMobile.css
@@ -65,6 +65,10 @@
     line-height: 1.3;
   }
 
+  .textGap p {
+    line-height: 1.3;
+  }
+
   /* Sphere One */
   .ballDiv {
     position: absolute;
@@ -139,12 +143,7 @@
     display: none;
   }
 
-  
-  p.textGap {
-      display: hidden;
-      width: 50px;
-  }
-    
+   
   /* Footer Mobile Styles */
   footer {
     position: fixed;
